add customers and customers-list component

--- a/src/app/shared/layout/footer.component.html
+++ b/src/app/shared/layout/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer mt-auto">
+    <div class="container">
+        <p class="text-center py-2 text-white">Copyright {{ today | date: 'yyyy' }} | Firnaz Luztian Adiansyah</p>
+    </div>
+  </footer>
