--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,2 +1,2 @@
-<p>customers works!</p>
-<app-customers-list></app-customers-list>
+<p>Customer lists</p>
+<app-customers-list [customers]='people'></app-customers-list>
