--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,2 +1,1 @@
-<p>Customer lists</p>
-<app-customers-list [customers]='people'></app-customers-list>
+<app-customers-list [customers]="customerList"></app-customers-list>
