--- a/src/app/shared/layout/footer.component.html
+++ b/src/app/shared/layout/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto">
     <div class="container">
-        <p class="text-center py-2 text-white">Copyright {{ today | date: 'yyyy' }} | Firnaz Luztian Adiansyah</p>
+        <p class="text-center py-2 text-white">Copyright {{ today }} | Firnaz Luztian Adiansyah</p>
     </div>
   </footer>
