--- a/src/app/customers/customers-list/customers-list.component.html
+++ b/src/app/customers/customers-list/customers-list.component.html
@@ -1,1 +1,35 @@
-<p>customers-list works!</p>
+<p>customers-list table</p>
+<table class="table table-hover">
+
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>City</th>
+            <th>Order Total</th>
+        </tr>
+    </thead>
+
+    <tr *ngFor="let item of _customers">
+        <td>
+            <a>
+                {{ item.name }}
+            </a>
+        </td>
+        <td>{{ item.city }}</td>
+        <td>${{ item.orderTotal }}</td>
+    </tr>
+
+    <tr *ngIf="_customers">
+        <td colspan="2">&nbsp;</td>
+        <td>
+            ${{ customerOrderTotal }}
+        </td>
+    </tr>
+
+    <p *ngIf="_customers">Number of customer: {{ _customers.length }}</p>
+    
+    <tr *ngIf="!_customers">
+        <td colspan="4">No customers found</td>
+    </tr>
+
+</table>
